--- a/app2-an_array/index.html
+++ b/app2-an_array/index.html
@@ -1,12 +1,28 @@
 <html ng-app="arrayApp">
-	<head>
-		<link rel="stylesheet" href="style.css"></link>
-	</head>
-	<body ng-controller="arrayController">
-	
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-		<script src="app.js"></script>
-		<script src="controller.js"></script>
-		<script src="service.js"></script>
-	</body>
+    <head>
+        <link rel="stylesheet" href="style.css"></link>
+    </head>
+    <body ng-controller="arrayController">
+
+
+
+
+
+    Name: <input ng-model="newName"/>
+    Email: <input ng-model='newEmail' />
+    <button ng-click="addNewPerson(newName, newEmail)">Make a new person</button>
+    <div ng-repeat="person in data">
+      <h3>{{person.name}}</h3>
+      <p>{{person.email}}</p>
+    </div>
+
+
+
+
+
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+        <script src="app.js"></script>
+        <script src="controller.js"></script>
+        <script src="service.js"></script>
+    </body>
 </html>
