--- a/app6-routing/index.html
+++ b/app6-routing/index.html
@@ -1,9 +1,22 @@
-<html>
+<html ng-app="app6">
 	<body>
 		<h1>app6 - routing</h1>
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-		<script src="app.js"></script>
-		<script src="controller.js"></script>
-		<script src="service.js"></script>
+		<nav>
+			<button ui-sref="home">Home</button>
+			<button ui-sref="signup">Sign Up</button>
+			<button ui-sref="details">Details</button>
+		</nav>
+
+		<ui-view></ui-view>
+
+
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
+		<script src="app.js" charset="utf-8"></script>
+		<script src="service.js" charset="utf-8"></script>
+		<script src="controller.js" charset="utf-8"></script>
+		<script src="./details/detailsCtrl.js" charset="utf-8"></script>
+		<script src="./home/homeCtrl.js" charset="utf-8"></script>
+		<script src="./signup/signupCtrl.js" charset="utf-8"></script>
 	</body>
 </html>
